--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         .hero-image-container img {
             width: 100%;
             height: 100%;
-            object-fit: contain; /* Mantiene proporción original sin estirar */
-            object-position: center top;
-            transform: scaleX(1); /* Sin contracción horizontal */
+            object-fit: cover; /* Cambiado a cover para zoom in y cubrir todo el contenedor */
+            object-position: center center; /* Centrado para mejor encuadre */
+            transform: scale(1.1); /* Zoom in para eliminar líneas negras */
         }
 
         header h1 {
