Update text and image sources in index.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <img src="https://cdn.abacus.ai/images/91d8f9aa-0f20-40f5-b3d3-b22c68eb2cb0.png" alt="Tigran">
             </div>
             <h1>TigranSoundLab</h1>
-            <p>PROFESSIONAL FRENCH HORN SCHOOL AND MUSIC EDUCATION</p>
+            <p>PROFESSIONAL FRENCH HORN SCHOOL MUSIC EDUCATION AND EVENTS</p>
         </div>
     </header>
 
@@ -175,9 +175,9 @@
         <ul class="nav-links">
             <li><a href="#about" data-en="About" data-es="Sobre mí" data-ru="Обо мне" data-hy="Իմ մասին">About</a></li>
             <li><a href="#services" data-en="Services" data-es="Servicios" data-ru="Услуги" data-hy="Ծառայություններ">Services</a></li>
-            <li><a href="#instructor" data-en="Instructor" data-es="Instructor" data-ru="Инструктор" data-hy="Ուսուցիչ">Instructor</a></li>
+            <li><a href="#instructor" data-en="Teacher" data-es="Profesor" data-ru="Учитель" data-hy="Ուսուցիչ">Teacher</a></li>
             <li><a href="#gallery" data-en="Gallery" data-es="Galería" data-ru="Галерея" data-hy="Պատկերասրահ">Gallery</a></li>
-            <li><a href="#contact" data-en="Contact" data-es="Contacto" data-ru="Контакт" data-hy="Կապ">Contact</a></li>
+            <li><a href="#contact" data-en="Contacts" data-es="Contactos" data-ru="Контакты" data-hy="Կապեր">Contacts</a></li>
         </ul>
         <div class="language-switcher">
             <button onclick="setLang('en')" id="btn-en" class="active">EN</button>
@@ -236,17 +236,16 @@
     <section id="gallery">
         <h2 data-en="Gallery" data-es="Galería" data-ru="Галерея" data-hy="Պատկերասրահ">Gallery</h2>
         <div class="gallery-grid">
+            <img src="a9bee456-f42d-4820-85be-14005a51e714.jpg" class="gallery-item">
+            <img src="df8f26b0-232f-46ae-96fa-02f37184df96.jpg" class="gallery-item">
+            <img src="d87d9582-22bb-42eb-879a-6dda00d4a734.jpg" class="gallery-item">
             <img src="86970af0-d727-41cb-a5cf-40a262900e3e.jpg" class="gallery-item">
-            <img src="f18644d4-874a-4769-a9d8-45aad396b0d1.jpg" class="gallery-item">
             <img src="2e0cd3a7-1b38-48d3-865a-0652441b06d9.jpg" class="gallery-item">
             <img src="28066426-5fa5-4000-8c1a-5f67f9780619.jpg" class="gallery-item">
             <img src="40f7314b-b0f4-4f6e-b08a-0ded7cbd423b.jpg" class="gallery-item">
             <img src="b2ccd998-d1fc-4062-941c-f0f9ebffea09.jpg" class="gallery-item">
             <img src="b6e4a50c-0558-43c2-9c11-31b22bc8fe42.jpg" class="gallery-item">
             <img src="fa16be3e-d40d-4d05-a620-2d6b7940d57e.jpg" class="gallery-item">
-            <img src="cfc11186-2727-4b2d-bedb-47798a669dfa.jpg" class="gallery-item">
-            <img src="a9bee456-f42d-4820-85be-14005a51e714.jpg" class="gallery-item">
-            <img src="df8f26b0-232f-46ae-96fa-02f37184df96.jpg" class="gallery-item">
         </div>
     </section>
 
