Update video source in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <header>
         <div class="video-background">
             <video autoplay muted loop playsinline>
-                <source src="WhatsApp Video 2026-02-05 at 9.25.32 PM.mp4" type="video/mp4">
+                <source src="fondo-hecho-con-microsoft-clipchamp_0Yyr6iwG.mp4" type="video/mp4">
             </video>
         </div>
         <div class="header-content">
